tests/tsc-references/internalModules/moduleDeclarations/invalidNestedModules/input.ts/es2015.2.minified/output.js
var A1, M21;
!function(A) {
    var B;
    (B || (B = {
    })).C = class {
    }, A.B = B;
}(A1 || (A1 = {
})), (function(M2) {
    var X, Point;
    (X || (X = {
    })).Point = Point, M2.X = X;
})(M21 || (M21 = {
}));
